Centered the image-capture-container element on small screen size - fixed the style bug

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ nav > div a.nav-item.nav-link:hover {
     display: block;
   }
 
-  #video-capture-container {
+  #image-capture-container {
     width: 100vw;
   }
   #video-capture-container {
